--- a/index.html
+++ b/index.html
@@ -508,6 +508,12 @@
                 专注于构建高性能、可扩展的Web应用，将创新技术与实际需求完美结合
             </p>
             <div class="flex justify-center gap-4 flex-wrap">
+                <a href="#about" class="glow-effect px-8 py-4 bg-gradient-to-r from-blue-500 to-cyan-400 rounded-full text-white font-semibold hover:shadow-lg transition-all duration-300">
+                    我的介绍
+                </a>
+                <a href="#about" class="px-8 py-4 border-2 border-blue-400 rounded-full text-blue-400 font-semibold hover:bg-blue-400 hover:text-white transition-all duration-300">
+                    实习经历
+                </a>
                 <a href="#projects" class="glow-effect px-8 py-4 bg-gradient-to-r from-blue-500 to-cyan-400 rounded-full text-white font-semibold hover:shadow-lg transition-all duration-300">
                     查看作品
                 </a>
